approvald/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: approvald
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
